# SimpleExtJSApp

./: Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  package-lock.json  package.json  webpack.config.js
.github/workflows/: ci.yml
cgi-bin/: Makefile.am  Makefile.in  perl.cgi  python.cgi  test.c
src/: dsm-control.sh  service-setup.sh
src/app/: checkUpdateStatus.cgi  config  config.txt  createsqlitedata.cgi  createsqlitedata.sql  getAddons.cgi  getConfig.cgi  getModules.cgi  getNetworkInfo.cgi  getRrReleaseInfo.cgi  helptoc.conf  readUpdateFile.cgi  rr-manager.js  rr-manager.js_  rr-manager.widget.js  style.css  uploadConfigFile.cgi
src/app/help/enu/: simpleapp_index.html
src/app/help/fre/: simpleapp_index.html
src/app/texts/chs/: strings
src/app/texts/cht/: strings
src/app/texts/enu/: strings
src/app/texts/fre/: strings
src/app/texts/kor/: strings
src/app/texts/krn/: strings
src/app/texts/rus/: strings
src/app/texts/ukr/: strings
src/conf/: privilege_  resource
src/src/: appWindow.js  index.js
src/src/components/: advancedSearchField.js  statusBox.js  statusBoxTmpl.js
src/src/components/updateWizard/: imagePanel.js  newImagePanel.js  storagePanel.js  utilsStep.js  utilsWizard.js  wizard.js
src/src/panels/: healthPanel.js  statusBoxsPanel.js
src/src/panels/debug/: generalTab.js
src/src/panels/settings/: generalTab.js  rrConfigTab.js  (+1 more)
src/src/tabs/: addons.js  debug.js  main.js  setting.js
src/src/utils/: updateWizardHelper.js
src/wizard_templates/: install_uifile.sh  uifile_vars  uifile_vars_fre
