#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([SimpleExtJSApp], [0.1], [bugreport@digitalbox.com])
AM_INIT_AUTOMAKE
#AC_CONFIG_SRCDIR([cgi-bin/test.c])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h strings.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CHECK_FUNCS([bzero])

AC_OUTPUT(Makefile cgi-bin/Makefile)
